Adding new variants for Zambia a Zimbabwe. Changing about, strings and generation code method for Zambia.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        zambia {
+            applicationId "org.eyeseetea.uicapp.zambia"
+        }
+        zimbabwe {
+            applicationId "org.eyeseetea.uicapp.zimbabwe"
+        }
+    }
 }
 
 dependencies {
