--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion "27.0.3"
     defaultConfig {
-        applicationId "org.eyeseetea.uicapp"
+        applicationId "org.eyeseetea.uicapp_dev"
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 6
