--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ android {
             versionCode 6
             versionName "1.0.6"
         }
+        malawi {
+            applicationId "org.eyeseetea.uicapp.malawi_dev"
+            versionCode 1
+            versionName "1.0.0"
+        }
     }
 }
 
