--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ script:
 - ./gradlew build
 before_install:
 - openssl aes-256-cbc -K $encrypted_6de5e2e53dd7_key -iv $encrypted_6de5e2e53dd7_iv
-  -in gradle.properties.enc -out gradle.properties -d
+  -in app/gradle.properties.enc -out app/gradle.properties -d
